<resources>

    <string name="app_name">Area Calculator</string>
    <string name="circle">Circle</string>
    <string name="triangle">Triangle</string>
    <string name="retangle">Retangle</string>
    <string name="next">Next</string>
    <string name="warning">Chose one of the options </string>
    <string name="text">Chose one of the geometric form to calculate </string>
    <string name="infoR">Inform the radios in cm</string>
    <string name="infoAlt">Inform the height in cm</string>
    <string name="infoBase">Inform the base in cm</string>m
    <string name="totalarea">Total Area:</string>m
    <string name="calculate">Calculate</string>m
    <string name="warninginfo">Inform a valid value!!!</string>m

</resources>
